--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1683,107 +1683,107 @@ stories:
   domain: http://www.bossierpress.com/
   link: https://bossierpress.com/bossier-jury-finds-man-guilty-of-second-degree-murder/
 images:
-- name: capital-battle-capitolbattle-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colorful-blocks.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
-- name: school-clouds-church-clouds-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-really-hot.jpg
-- name: meadowbutterfly-meadow-butterfly-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-three.jpg
-- name: copper-circuit-container-ship-in-seattle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-container-ship-in-seattle.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-propaganda-leaflets.JPG
-- name: pigeons-on-the-ledge-pigeons-on-ledge-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-alien-goggles.jpg
-- name: gears-4882162452-fa3126b38d-b-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-yellow-collage.jpg
-- name: bf-skinner-train-tracks-bending.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-tracks-bending.jpg
-- name: old-barn-old-barn-1500-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
-- name: bluelake-creativity-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-00-00.jpg
-- name: christianity-christianity-under-construction-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-attack-planes.jpg
-- name: old-granary-field-oldhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gred-mash.jpg
-- name: aws-s3-stories-gears-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gears-smoking-cigarette.jpg
-- name: berlinwall-DSC-0084-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-cinnamon-rolls.jpg
-- name: old-granary-field-oldhouse-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-purp-paper.jpg
-- name: copper-circuit-lincoln-sitting-front.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-lincoln-sitting-front.jpg
-- name: old-school-house-old-schoolhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-rainbow-festival.jpg
-- name: bf-skinner-destruction-seattle-viaduct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-destruction-seattle-viaduct.jpg
-- name: fence-mexico.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico.jpg
-- name: oldhouse-oldhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dali-two.jpg
-- name: aws-s3-stories-lincoln-consitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-lincoln-consitution.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-propaganda-leaflets.jpg
-- name: aws-s3-stories-mosaic-face-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit-3.jpg
-- name: supreme-court-supremecourt-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-feed-people.jpg
-- name: old-school-house-old-schoolhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-two.jpg
-- name: christianity-christianity-under-construction-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-feed-people.jpg
-- name: stalin-time-train-station-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-station-statue.jpg
-- name: powerlines-power-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colorful-dream.jpg
-- name: christianity-christianity-under-construction-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-monet-one.jpg
-- name: old-cabin-oldcabin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
-- name: 35562068104_fa20c57575-rain-princess.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-rain-princess.jpg
-- name: docks-docks-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-atari-missle.jpg
-- name: abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-- name: berlinwall-DSC-0084-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-oily-mcoilface.jpg
-- name: capital-battle-capitolbattle-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-hot-spicy.jpg
-- name: file-00_00_00_00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_00_00.jpg
-- name: gypsy-wagon-gypsywagon-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-far-away.jpg
-- name: beach-rocks-beach-rocks-currents-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kandinsky-bv.jpg
-- name: oldhousecars-house-old-cars-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-diego-rivera1.jpg
-- name: catacombs-catacombs-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-light-dali.jpg
-- name: gypsymosaic-gypsy-eyes-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colorful-dream.jpg
-- name: rain-princess-concert-hall-bright-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-concert-hall-bright-lights.jpg
-- name: oldhotel-oldhotel-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-rainbow-festival.jpg
-- name: rain-princess-DSC_0062.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0062.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-yellow-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-paper.JPG
-- name: catacombs-catacombs-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smooth-ride.jpg
-- name: legal-statue-legalstatue-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dry-skin.jpg
-- name: berlinwall2-berlinwall-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-internet-numbers.jpg
-- name: christianity-christianity-under-construction-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-horiz-circuit.jpg
+- name: yosemite-yosemite-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-rain.jpg
+- name: school-clouds-church-clouds-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dry-skin.jpg
+- name: cargo-ship-cargo-ship-on-sea-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-blocks.jpg
+- name: la-muse-nyc-coming-in-on-train.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-coming-in-on-train.jpg
+- name: copper-circuit-water-fountain-many-shooting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-water-fountain-many-shooting.jpg
+- name: yosemite-yosemite-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
+- name: nazi-invasion-IMG_6288.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6288.jpg
+- name: adam-smith-adam-smith-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-oily-mcoilface.jpg
+- name: stalin-time-lighthouse_36679514616_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-lighthouse_36679514616_o.jpg
+- name: oldbarn-oldbarn-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-gred-mash.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-deep-connections.jpg
+- name: store-on-corner-oldcabin-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-sunday.jpg
+- name: capital-battle-capitolbattle-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-emily-carr.jpg
+- name: amusement-park-amusement-park-2-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sand-paper.jpg
+- name: windowmountain-window-mountain-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-nazi-poster.jpg
+- name: lincoln-memorial-lincolnmemorial-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-aqua.jpg
+- name: dragon-desert-desert-dragon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon.jpg
+- name: abandonedbuildings_mucha_mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_mucha_mult.jpg
+- name: razorcliff-razorcliff-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colorful-blocks.jpg
+- name: downtheline-downtheline-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gred-mash.jpg
+- name: mosaic-face-mosaic-face-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purp-paper.jpg
+- name: oldhouse-oldhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-smooth-ride.jpg
+- name: blossombar-space-pizza-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-24-99.jpg
+- name: status-berlin-status-berlin-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-4.jpg
+- name: gears-4882162452-fa3126b38d-b-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-aqua.jpg
+- name: beach-rocks-beach-rocks-currents-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-brush.jpg
+- name: old-barn-old-barn-1500-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sand-paper.jpg
+- name: old-gas-pumps-oldgaspumps-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-blocks.jpg
+- name: nazi-invasion-old-time-cash-register.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-time-cash-register.jpg
+- name: mediterranean-mediterranean.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean.jpg
+- name: crow_dark_dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_dali.jpg
+- name: 35562068104_fa20c57575-scream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-scream.jpg
+- name: dc-statue-dcstatue-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-creativity.jpg
+- name: old-granary-field-oldhouse-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-wols.jpg
+- name: downtown-los-angeles-downtown-la-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-graham-sutherland.JPG
+- name: san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
+- name: server-cloud-server-racks-door-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-creativity.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-plentiful.jpg
+- name: walled-garden-walled-garden-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-satan-red.jpg
+- name: statue-of-liberty-front-view-statueofliberty-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-asteroids.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crafty-painting.jpg
+- name: stalin-time-sub-way-bart-going-by.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-sub-way-bart-going-by.jpg
+- name: subway-subway-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-cinnamon-rolls.jpg
+- name: aws-s3-royalroads-royalroads-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still.jpg
+- name: stalin-time-statue-staring-down-to-right.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-staring-down-to-right.jpg
+- name: sand-hand-sand-hand-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-constitution.jpg
+- name: gears-4882162452-fa3126b38d-b-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-three.jpg
+- name: border-crossing-bordercrossing-crunch-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-crunch-paper.png
+- name: stories-dragon-close-up-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-clean-view.jpg
+- name: berlinwall2-berlinwall-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-atari-missle.jpg
+- name: oldroad-old-road-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-collage.jpg
 ---
 Director Of Audience Development.&nbsp;Union Names Seniors Of The Month For November.&nbsp;Insurance Provider Cuts Call Center Fraud By 40%.&nbsp;Do You Plan To Stay Up Until Midnight On New Year's Eve?.&nbsp;Semitrailer Inflicts Major Damage On Florida Landmark.&nbsp;Rumford Residents Paying It Forward At Christmas.&nbsp;Fed Parental Leave Policy Could Spur Companies To Get On Bandwagon.&nbsp;Filing Period For March 3rd Primary Ends.&nbsp;
